Update on Overleaf.

--- a/cv.tex
+++ b/cv.tex
@@ -213,10 +213,11 @@
   \newline\vspace{-.8em}
 
   \noindent %
-  Full-stack development for small businesses, including graphic design and branding. Front-end experience with JavaScript; back-end development using Clojure, Node.js, PHP, MySQL, PostgreSQL, and Jekyll. Clients included publishing houses, musicians, and a beauty parlour.%
+  Full-stack development for small businesses, including graphic design and branding. Front-end experience with JavaScript; back-end development using Clojure, Node.js, PHP, MySQL, PostgreSQL, and Jekyll.%
 
   % Clients:
   %
+  % CGO'18
   % The Beauty Rooms
   % Barthelemy Jusselme
   % Myrmidon Books
@@ -274,6 +275,7 @@
 
 \Description{%
   \MarginText{\textbf{Invited Talks}}%
+  SPLS 2017, %
   Codeplay Software 2016, %
   Ocado Technology 2016, %
   Amazon Development Center 2016.%
