--- a/difftest/Bootstrap Crashes.ipynb
+++ b/difftest/Bootstrap Crashes.ipynb
@@ -29,7 +29,7 @@
     "import db as db\n",
     "import sqlalchemy as sql\n",
     "from db import *\n",
-    "%run util.py\n",
+    "%run uti tl.py\n",
     "\n",
     "hostname = \"cc1\"\n",
     "db.init(hostname)"
@@ -50,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
