--- a/difftest/Bootstrap Crashes.ipynb
+++ b/difftest/Bootstrap Crashes.ipynb
@@ -61,11 +61,6 @@
     "\n",
     "from reproduce import reproduce\n",
     "\n",
-    "platforms2vendors = {\n",
-    "    \"Intel Gen OCL Driver\": \"intel\",\n",
-    "    \"Portable Computing Language\": \"pocl\",\n",
-    "}\n",
-    "\n",
     "fs.mkdir(\"outbox\")\n",
     "with Session(commit=True) as s:\n",
     "    q = s.query(TABLE)\\\n",
@@ -82,7 +77,7 @@
     "            continue\n",
     "        errs.add(key)\n",
     "        \n",
-    "        vendor = platforms2vendors[result.testbed.platform]\n",
+    "        vendor = PLATFORMS_2_VENDORS[result.testbed.platform]\n",
     "        \n",
     "        outpath = fs.path(\"outbox\", f\"bug-report-{vendor}-{result.id}.sh\")\n",
     "\n",
