clean slate results

--- a/paper.tex
+++ b/paper.tex
@@ -7,11 +7,11 @@
 %
 % any author declaration will be ignored  when using 'pldi' option (for double blind review)
 %
-\authorinfo{Person 1 \and Person 2}
-{\makebox{A Department} \\
-        \makebox{A University}  \\
-        \makebox{A Place, AS 12345}}
-{\{person1,person2\}@cs.auniv.edu}
+%\authorinfo{Person 1 \and Person 2}
+%{\makebox{A Department} \\
+%        \makebox{A University}  \\
+%        \makebox{A Place, AS 12345}}
+%{\{person1,person2\}@cs.auniv.edu}
 
 \maketitle
 
