--- a/tab/results.tex
+++ b/tab/results.tex
@@ -2,9 +2,9 @@
   \scriptsize %
   \centering %
   % \rowcolors{2}{white}{gray!25}
-  \begin{tabular}{llll | rrrrr | rrrrr}
+  \begin{tabular}{llll | rrrrr | rrrrr }
     \toprule
-     & & & & \multicolumn{5}{|c|}{CLgen} & \multicolumn{5}{|c|}{CLSmith} \\
+     & & & & \multicolumn{5}{|c|}{CLgen} & \multicolumn{5}{|c}{CLSmith} \\
     \# & Platform & Device & Driver & w & bf & c & to & y & w & bf & c & to & y \\
     \midrule
 
