Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -53,7 +53,7 @@
     title = {{In-place sorting with fewer moves}},
     year = {1999},
     journal = {Information Processing Letters},
-    author = {Katajainen, Jyrki and East, Dk- Copenhagen and Pasanen, Tomi A},
+    author = {Katajainen, J. and Pasanen, T. A.},
     volume = {70},
     keywords = {in-place algorithms, mergesort, merging, multiway merge, sorting}
 }
@@ -62,7 +62,7 @@
     title = {{Highly Scalable Parallel Sorting}},
     year = {2010},
     booktitle = {IPDPS},
-    author = {Solomonik, Edgar and Kal, Laxmikant V}
+    author = {Solomonik, E. and Kal, L. V.}
 }
 
 @inproceedings{Botorog1996,
@@ -110,7 +110,7 @@
 @book{Katajainen1997,
     title = {{A Meticulous Analysis of Mergesort Programs}},
     year = {1997},
-    author = {Katajainen, Jyrki and Trgff, Jesper Larsson},
+    author = {Katajainen, J. and Trgff, J. L.},
     number = {9400952},
     volume = {2}
 }
@@ -6084,7 +6084,7 @@
 }
 
 @inproceedings{Stephenson2005,
-    title = {{Predicting unroll factors using supervised classification}},
+    title = {{Predicting Unroll Factors Using Supervised Classification}},
     year = {2005},
     booktitle = {CGO},
     author = {Stephenson, M. and Amarasinghe, S.},
@@ -6666,7 +6666,7 @@
     title = {{Expression Templates}},
     year = {1995},
     journal = {C++ Report},
-    author = {Veldhuizen, Tode},
+    author = {Veldhuizen, T.},
     number = {5},
     volume = {7}
 }
@@ -6675,7 +6675,7 @@
     title = {{Dynamic Expression Trees}},
     year = {1995},
     journal = {Algorithmica},
-    author = {Cohen, Robert F. and Tamassia, Roberto},
+    author = {Cohen, R. F. and Tamassia, R.},
     number = {3},
     volume = {13}
 }
@@ -6899,7 +6899,7 @@
     title = {{Studying the language and structure in non-programmers' solutions to programming problems}},
     year = {2001},
     journal = {IJHCS},
-    author = {Pane, John F. and Ratanamahatana, Chotirat “Ann” and Myers, Brad A.},
+    author = {Pane, J. F. and Ratanamahatana, C. A. and Myers, B. A.},
     number = {2},
     volume = {54},
     url = {http://linkinghub.elsevier.com/retrieve/pii/S1071581900904105},
@@ -8385,13 +8385,13 @@
 @article{Bernstein2005,
     title = {{Salsa20 design}},
     year = {2005},
-    author = {Bernstein, Daniel J}
+    author = {Bernstein, D. J.}
 }
 
 @article{Bernstein2005a,
     title = {{Salsa20 speed}},
     year = {2005},
-    author = {Bernstein, Daniel J}
+    author = {Bernstein, D. J.}
 }
 
 @article{Ioannidis2005,
@@ -8639,7 +8639,7 @@
 @article{Horvitz2016,
     title = {{Artificial intelligence and life in 2030}},
     year = {2016},
-    author = {Horvitz, Eric}
+    author = {Horvitz, E.}
 }
 
 @article{Wangb,
@@ -8682,7 +8682,7 @@
 
 @article{Schmidhuber2014,
     title = {{Deep Learning in Neural Networks: An Overview}},
-    year = {61},
+    year = {2014},
     journal = {Neural networks},
     author = {Schmidhuber, J.}
 }
@@ -9430,17 +9430,6 @@
     keywords = {Automated tuning, CUDA, Code generation, GPU, High-level languages, Many-core, Massive parallelism, OpenCL, Single-instruction multiple-data, Software engineering}
 }
 
-@inproceedings{Yang2011,
-    title = {{Finding and Understanding Bugs in C Compilers}},
-    year = {2011},
-    booktitle = {PLDI},
-    author = {Yang, X. and Chen, Y. and Eide, E. and Regehr, J.},
-    isbn = {9781450306638},
-    doi = {10.1145/2345156.1993532},
-    issn = {03621340},
-    keywords = {automated testi, automated testing, compiler defect, compiler testing, random program generation, random testing}
-}
-
 @inproceedings{Voronenko2009,
     title = {{Computer Generation of General Size Linear Transform Libraries}},
     year = {2009},
@@ -9754,10 +9743,7 @@
     journal = {TACO},
     author = {Wang, Z. and Grewe, D. and O'Boyle, M.},
     number = {4},
-    volume = {11},
-    url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6494993%5Cnhttp://www.mendeley.com/research/portable-mapping-data-parallel-programs-opencl-heterogeneous-systems-2/},
-    isbn = {9781467355254},
-    doi = {10.1109/CGO.2013.6494993}
+    volume = {11}
 }
 
 @article{Wang2014c,
@@ -11392,13 +11378,6 @@
     keywords = {Machine Learning}
 }
 
-@inproceedings{Zhang2016b,
-    title = {{Skeletal Program Enumeration for Rigorous Compiler Testing}},
-    year = {2017},
-    booktitle = {PLDI},
-    author = {Zhang, Q. and Sun, C. and Su, Z.}
-}
-
 @article{Donahue2017,
     title = {{Dance Dance Convolution}},
     year = {2017},
@@ -11434,4 +11413,204 @@
     year = {2017},
     journal = {arXiv:1703.08646},
     author = {Jo, Y.}
+}
+
+@inproceedings{Jouppi2017,
+    title = {{In-Datacenter Performance Analysis of a Tensor Processing Unit​ TM}},
+    year = {2017},
+    booktitle = {ISCA},
+    author = {Jouppi, N. P. and Young, C. and Patil, N. and Patterson, D. and Agrawal, G. and Bajwa, R. and Bates, S. and Bhatia, S. and Boden, N. and Borchers, A. and Boyle, R. and Cantin, P. and Chao, C. and Clark, C. and Coriell, J. and Daley, M. and Dau, M. and Dean, J. and Gelb, B. and Ghaemmaghami, T. V. and Gottipati, R. and Gulland, W. and Hagmann, R. and Ho, C. R. and Hogberg, D. and Hu, J. and Hundt, R. and Hurt, D. and Ibarz, J. and Jaffey, A. and Jaworski, A. and Kaplan, A. and Khaitan, H. and Koch, A. and Kumar, N. and Lacy, S. and Laudon, J. and Law, J. and Le, D. and Leary, C. and Liu, Z. and Lucke, K. and Lundin, A. and Mackean, G. and Maggiore, A. and Mahony, M. and Miller, K. and Nagarajan, R. and Narayanaswami, R. and Ni, R. and Nix, K. and Norrie, T. and Omernick, M. and Penukonda, N. and Phelps, A. and Ross, J. and Ross, M. and Salek, A. and Samadiani, E. and Severn, C. and Sizikov, G. and Snelham, M. and Souter, J. and Steinberg, D. and Swing, A. and Tan, M. and Thorson, G. and Tian, B. and Toma, H. and Tuttle, E. and Vasudevan, V. and Walter, R. and Wang, W. and Wilcox, E. and Yoon, G. H.}
+}
+
+@article{Zhou2016a,
+    title = {{DoReFa-Net: Training Low Bitwidth Convolutional Neural Networks with Low Bitwidth Gradients}},
+    year = {2016},
+    journal = {arXiv:1606.06160},
+    author = {Zhou, S. and Ni, Z. and Zhou, X. and Wen, H. and Wu, Y. and Zou, Y.}
+}
+
+@article{Radford2016,
+    title = {{Learning to Generate Reviews and Discovering Sentiment}},
+    year = {2017},
+    journal = {arXiv:1704.01444},
+    author = {Radford, A. and Jozefowicz, R. and Sutskever, I.}
+}
+
+@article{Jouppi2017b,
+    title = {{In-Datacenter Performance Analysis of a Tensor Processing Unit​}},
+    year = {2017},
+    author = {Jouppi, Norman P and Young, Cliff and Patil, Nishant and Patterson, David and Agrawal, Gaurav and Bajwa, Raminder and Bates, Sarah and Bhatia, Suresh and Boden, Nan and Borchers, Al and Boyle, Rick and Cantin, Pierre-Luc and Chao, Clifford and Clark, Chris and Coriell, Jeremy and Daley, Mike and Dau, Matt and Dean, Jeffrey and Gelb, Ben and Ghaemmaghami, Tara Vazir and Gottipati, Rajendra and Gulland, William and Hagmann, Robert and Ho, C Richard and Hogberg, Doug and Hu, John and Hundt, Robert and Hurt, Dan and Ibarz, Julian and Jaffey, Aaron and Jaworski, Alek and Kaplan, Alexander and Khaitan, Harshit and Koch, Andy and Kumar, Naveen and Lacy, Steve and Laudon, James and Law, James and Le, Diemthu and Leary, Chris and Liu, Zhuyuan and Lucke, Kyle and Lundin, Alan and Mackean, Gordon and Maggiore, Adriana and Mahony, Maire and Miller, Kieran and Nagarajan, Rahul and Narayanaswami, Ravi and Ni, Ray and Nix, Kathy and Norrie, Thomas and Omernick, Mark and Penukonda, Narayana and Phelps, Andy and Ross, Jonathan and Ross, Matt and Salek, Amir and Samadiani, Emad and Severn, Chris and Sizikov, Gregory and Snelham, Matthew and Souter, Jed and Steinberg, Dan and Swing, Andy and Tan, Mercedes and Thorson, Gregory and Tian, Bo and Toma, Horia and Tuttle, Erick and Vasudevan, Vijay and Walter, Richard and Wang, Walter and Wilcox, Eric and Yoon, Doe Hyun},
+    pages = {1--17}
+}
+
+@article{Radford2016b,
+    title = {{Learning to Generate Reviews and Discovering Sentiment}},
+    year = {2017},
+    journal = {arXiv:1704.01444},
+    author = {Radford, A. and Jozefowicz, R. and Sutskever, I.},
+    url = {https://arxiv.org/pdf/1704.01444.pdf},
+    arxivId = {1704.01444}
+}
+
+@phdthesis{Potter,
+    title = {{Thesis Background Section}},
+    author = {Potter, R.}
+}
+
+@article{Klockner2014a,
+    title = {{Loo.py: transformation-based code generation for GPUs and CPUs}},
+    year = {2014},
+    journal = {ARRAY},
+    author = {Kl{\"{o}}ckner, A.},
+    url = {http://arxiv.org/abs/1405.7470%5Cnhttp://dx.doi.org/10.1145/2627373.2627387%5Cnhttp://dl.acm.org/citation.cfm?doid=2627373.2627387},
+    isbn = {9781450329378},
+    doi = {10.1145/2627373.2627387},
+    arxivId = {1405.7470},
+    keywords = {code generation, consisting of a tree, data layout, embedded language, gpu, gramming language python, high-level language, high-performance, of polyhedra, out in a language, the computa-, the user first specifies, tion, tion to be carried, vectoriza-}
+}
+
+@article{Yin2017,
+    title = {{A Syntactic Neural Model for General-Purpose Code Generation}},
+    year = {2017},
+    journal = {arXiv:1704.01696},
+    author = {Yin, P. and Neubig, G.},
+    url = {http://arxiv.org/abs/1704.01696},
+    arxivId = {1704.01696}
+}
+
+@article{Bhupatiraju2017a,
+    title = {{Deep API Programmer: Learning to Program with APIs}},
+    year = {2017},
+    journal = {arXiv:1704.04327},
+    author = {Bhupatiraju, S. and Singh, R. and Mohamed, A. and Kohli, P.}
+}
+
+@article{He2017,
+    title = {{Mask R-CNN}},
+    year = {2017},
+    journal = {arXiv:1703.06870},
+    author = {He, K. and Gkioxari, G. and Dollar, P. and Girshick, R.}
+}
+
+@article{Aimone2017,
+    title = {{Exponential scaling of neural algorithms - a future beyond Moore's Law?}},
+    year = {2017},
+    journal = {arXiv:1705.02042},
+    author = {Aimone, J. B.}
+}
+
+@article{Wilson2014,
+    title = {{Best Practices for Scientific Computing}},
+    year = {2014},
+    journal = {PLoS Biology},
+    author = {Wilson, G. and Aruliah, D. A. and Brown, C. T. and Chue Hong, N. P. and Davis, M. and Guy, R. T. and Haddock, S. H. D. and Huff, K. D. and Mitchell, I. M. and Plumbley, M. D. and Waugh, B. and White, E. P. and Wilson, P.},
+    number = {1},
+    volume = {12}
+}
+
+@techreport{This2016,
+    title = {{Rules of Machine Learning: Best Practices for ML Engineering}},
+    year = {2016},
+    author = {Zinkevich, M.},
+    url = {papers3://publication/uuid/4CC57281-97A2-4896-BC0D-94B065C5B70B}
+}
+
+@article{Seff2017,
+    title = {{Continual Learning in Generative Adversarial Nets}},
+    year = {2017},
+    journal = {arXiv:1705.08395},
+    author = {Seff, A. and Beatson, A. and Suo, D. and Liu, H.}
+}
+
+@article{Wigner1960,
+    title = {{The Unreasonable Effectiveness of Mathematics in the Natural Sciences}},
+    year = {1960},
+    journal = {Communications on Pure and Applied Mathematics},
+    author = {Wigner, E.},
+    number = {1},
+    volume = {13},
+    isbn = {053403201X},
+    issn = {1097-0312}
+}
+
+@article{Bowman2015,
+    title = {{Generating Sentences from a Continuous Space}},
+    year = {2015},
+    journal = {arXiv:1511.06349},
+    author = {Bowman, S. R. and Vilnis, L. and Vinyals, O. and Dai, A. M. and Jozefowicz, R. and Bengio, S.}
+}
+
+@inproceedings{Zhang2017a,
+    title = {{Skeletal Program Enumeration for Rigorous Compiler Testing}},
+    year = {2017},
+    booktitle = {PLDI},
+    author = {Zhang, Q. and Sun, C. and Su, Z.}
+}
+
+@article{Langdon2017,
+    title = {{Genetic improvement of GPU software}},
+    year = {2017},
+    journal = {Genetic Programming and Evolvable Machines},
+    author = {Langdon, W. B. and Lam, B. Y. H. and Modat, M. and Petke, J. and Harman, M.},
+    number = {1},
+    volume = {18},
+    keywords = {Dynamic programming, GGGP, GI-GPGPU, GPGPU, Genetic programming, Grammar based genetic programming, Metaprogramming, NVidia CUDA, Parallel computing, SBSE}
+}
+
+@phdthesis{CaetanoDeOliveiraRicga2017,
+    title = {{Online Iterative Compilation Guided by Work-based Profiling}},
+    year = {2017},
+    author = {Caetano De Oliveira Ricga, R.}
+}
+
+@inproceedings{Yang2011c,
+    title = {{Finding and Understanding Bugs in C Compilers}},
+    year = {2011},
+    booktitle = {PLDI},
+    author = {Yang, X. and Chen, Y. and Eide, E. and Regehr, J.},
+    doi = {10.1145/2345156.1993532},
+    issn = {03621340},
+    keywords = {automated testi, compiler defect, compiler testing, random program generation, random testing}
+}
+
+@inproceedings{Yang2011b,
+    title = {{Finding and Understanding Bugs in C Compilers}},
+    year = {2011},
+    booktitle = {PLDI},
+    author = {Yang, X. and Chen, Y. and Eide, E. and Regehr, J.},
+    doi = {10.1145/2345156.1993532},
+    issn = {03621340},
+    keywords = {automated testi, compiler defect, compiler testing, random program generation, random testing}
+}
+
+@article{Chen2013,
+    title = {{Taming compiler fuzzers}},
+    year = {2013},
+    journal = {34th ACM SIGPLAN conference on Programming Language Design and Implementation},
+    author = {Chen, Yang and Groce, Alex and Zhang, Chaoqiang and Wong, Weng-Keen -. K and Fern, Xiaoli and Eide, Eric and Regehr, John},
+    number = {6},
+    pages = {197--208},
+    volume = {48},
+    url = {http://dl.acm.org/citation.cfm?id=2499370.2462173},
+    isbn = {9781450320146},
+    doi = {10.1145/2491956.2462173},
+    issn = {03621340},
+    keywords = {automated testing, bug reporting, compiler defect, compiler testing, fuzz testing, random testing, test-case reduction}
+}
+
+@inproceedings{Yang2011,
+    title = {{Finding and Understanding Bugs in C Compilers}},
+    year = {2011},
+    booktitle = {PLDI},
+    author = {Yang, X. and Chen, Y. and Eide, E. and Regehr, J.},
+    doi = {10.1145/2345156.1993532},
+    issn = {03621340},
+    keywords = {automated testi, compiler defect, compiler testing, random program generation, random testing}
+}
+
+@inproceedings{Cummins2017b,
+    title = {{End-to-end Deep Learning of Optimization Heuristics}},
+    year = {2017},
+    booktitle = {PACT, to appear in},
+    author = {Cummins, C. and Petoumenos, P. and Wang, Z. and Leather, H.}
 }
