--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -22,7 +22,7 @@ Deep Learning is a nascent field that is responsible for a multitude of breakthr
 
 \paragraph{Syntactic Generative Models} Benchmark generation~\cite{Cummins2017a}. Syntactic models provide no guarantees of correctness. System is very wasteful, with often less than 10\% of samples being programs which do useful work (their definition).
 
-Syntactic level modeling has been shown useful for identifying optimization characteristics~\cite{Cummins2017}.
+Syntactic level modeling has been shown useful for identifying optimization characteristics~\cite{Cummins2017b}.
 
 \paragraph{ILP} Goal-directed program generators have been used for a variety of domains, including generating linear transforms~\cite{Voronenko2009}, MapReduce programs~\cite{Smith}, and data structure implementations~\cite{Loncaric2016}. Program synthesis from input/output examples is used for simple algorithms in~\cite{Zaremba2015a}, string manipulation in~\cite{Gulwani2011}, and geometry constructions in~\cite{Gulwani2012}.
 
