--- a/preamble.tex
+++ b/preamble.tex
@@ -12,7 +12,7 @@
 %
 % the following standard packages may be helpful, but are not required
 %
-\usepackage{SIunits}            % typset units correctly
+\usepackage{siunitx}            % typset units correctly
 \usepackage{courier}            % standard fixed width font
 \usepackage[scaled]{helvet} % see www.ctan.org/get/macros/latex/required/psnfss/psnfss2e.pdf
 \usepackage{url}                  % format URLs
