--- a/tab/results.tex
+++ b/tab/results.tex
@@ -2,6 +2,6 @@
 	\scriptsize %
 	\centering %
 	\input{build/tab/megatable}
-	\caption{Testing results using CLSmith and CLgen. Configuration \#. as per Table~\ref{tab:platforms}. The columns show \textbf{w} wrong-code $\pm$ denotes optimizations off ($-$) vs on ($+$).}
+	\caption{Testing results using CLSmith and CLgen. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The columns denote \textbf{w} wrong-code, \textbf{bf} build failures, \textbf{c} runtime crashes, \textbf{\cmark} passed tests, \textbf{\xmark} rjected test cases.}
 	\label{tab:results}
 \end{table*}
