--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-Compilers should produce correct code, and, in when presented with bad inputs, produce meaningful errors. Testing these properties has lead to tools like CSmith.
+Compilers should produce correct code for valid inputs, and produce meaningful errors for invalid inputs. Testing these properties has lead to tools like CSmith.
 
 These tools, by design, yield programs which bare little resemblance to actual real code written by human programmers. This causes a triaging problem, as developers must inspect each problematic generated code to determine whether or not it exposes a bug worthy of fixing. [Only XX\% of ] What is needed is a technique for biasing the random generation of programs so that the generated codes closely resemble that of plausible, real hand written code.
 
