Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -10073,8 +10073,8 @@
 @article{Zhang2016a,
     title = {{StackGAN: Text to Photo-realistic Image Synthesis with Stacked Generative Adversarial Networks}},
     year = {2016},
+    journal = {arXiv:1612.03242},
     author = {Zhang, H. and Xu, T. and Li, H. and Zhang, S. and Huang, X. and Wang, X. and Metaxas, D.},
-    url = {http://arxiv.org/abs/1612.03242},
     arxivId = {1612.03242}
 }
 
@@ -11586,15 +11586,8 @@
 @article{Chen2013,
     title = {{Taming compiler fuzzers}},
     year = {2013},
-    journal = {34th ACM SIGPLAN conference on Programming Language Design and Implementation},
-    author = {Chen, Yang and Groce, Alex and Zhang, Chaoqiang and Wong, Weng-Keen -. K and Fern, Xiaoli and Eide, Eric and Regehr, John},
-    number = {6},
-    pages = {197--208},
-    volume = {48},
-    url = {http://dl.acm.org/citation.cfm?id=2499370.2462173},
-    isbn = {9781450320146},
-    doi = {10.1145/2491956.2462173},
-    issn = {03621340},
+    journal = {PLDI},
+    author = {Chen, Y. and Groce, A. and Zhang, C. and Wong, W. and Fern, X. and Eide, E. and Regehr, J.},
     keywords = {automated testing, bug reporting, compiler defect, compiler testing, fuzz testing, random testing, test-case reduction}
 }
 
