--- a/sec/results.tex
+++ b/sec/results.tex
@@ -1,5 +1,7 @@
 \section{Experimental Results}\label{sec:results}
 
+Table~\ref{tab:results}.
+
 \subsection{Are random strings useful?}
 
 Baseline: random string generator. We would expect badly formed CLgen samples to be more useful than random strings. If so, this confirms the hypothesis that well-formed programs are not a requirement for \emph{all} compiler testing (especially front end).
